fix gap for education header border and description background color

--- a/src/components/Sections/ExperienceSection/__styles__/EducationPanel.scss
+++ b/src/components/Sections/ExperienceSection/__styles__/EducationPanel.scss
@@ -20,7 +20,7 @@
         .education-panel-school-details {
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 20px;
             flex-grow: 1;
 
             h1 {
